--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>인터파크</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <!-- Link Swiper's CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
   </head>
   <body>
     <div class="wrap">
@@ -83,9 +88,103 @@
         </div>
       </header>
       <!-- 메인 영역 -->
-      <div class="main"></div>
+      <div class="main">
+        <!-- 비주얼 슬라이드 영역 -->
+        <section class="visual">
+          <div class="visual-inner">
+            <!-- swiper -->
+            <div class="swiper visual-slide">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <!-- 실제 내용 배치 -->
+                  <div class="visual-slide-item">
+                    <a href="#" alt="">
+                      <img src="images/v1.png" alt="" />
+                    </a>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <!-- 실제 내용 배치 -->
+                  <div class="visual-slide-item">
+                    <a href="#" alt="">
+                      <img src="images/v2.jpg" alt="" />
+                    </a>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <!-- 실제 내용 배치 -->
+                  <div class="visual-slide-item">
+                    <a href="#" alt="">
+                      <img src="images/v3.jpg" alt="" />
+                    </a>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <!-- 실제 내용 배치 -->
+                  <div class="visual-slide-item">
+                    <a href="#" alt="">
+                      <img src="images/v4.jpg" alt="" />
+                    </a>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <!-- 실제 내용 배치 -->
+                  <div class="visual-slide-item">
+                    <a href="#" alt="">
+                      <img src="images/v5.jpg" alt="" />
+                    </a>
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <!-- 실제 내용 배치 -->
+                  <div class="visual-slide-item">
+                    <a href="#" alt="">
+                      <img src="images/v6.png" alt="" />
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Swiper Navigation -->
+            <button class="visual-slide-prev"></button>
+            <button class="visual-slide-next"></button>
+            <!-- Swiper Pagination -->
+          </div>
+        </section>
+        <!-- //비주얼 슬라이드 영역 -->
+      </div>
       <!-- 하단 영역 -->
       <footer class="footer"></footer>
     </div>
   </body>
 </html>
+
+<script>
+  console.log("html끝에 기재가 정말 좋은 자리");
+</script>
+
+<!-- swiper JS : 1. 기능을 먼저 불러들여 줌 -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+
+<!-- Initialize Swiper : 2. 기능 사용함 -->
+<script>
+  var swiper = new Swiper(".visual-slide", {
+    slidesPerView: 2, //슬라이드 갯수
+    spaceBetween: 24, //여백
+    loop: true, // infinite loop
+    autoplay: {
+      delay: 1000, // 지연?
+      disableOnInteraction: false, //
+    }, // auto play
+    speed: 500,
+    navigation: {
+      nextEl: ".visual-slide-prev",
+      prevEl: ".visual-slide-next",
+    },
+  });
+</script>
