feat : 비주얼 슬라이드 데이터 연동완료 날
비주얼 슬라이드 데이터 연동완료 날

--- a/index.html
+++ b/index.html
@@ -427,34 +427,37 @@
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
                       <div class="live-slide-item">
-
                         <!-- 기본정보 -->
-                        <a href="${live_1.live_info.url}">
+                        <a href="#">
                           <!-- 기본정보 출력 -->
                           <div class="live-img">
                             <img src="images/l1.png" alt="" />
                           </div>
                           <div class="live-info">
-                            <ul>
-                              <li><h3>11월 02일 (목)</h3></li>
-                              <li><h2>18:00</h3></li>
-                            </ul>
+                            <span>방송예정</span>
+                            <span>네스트호텔 최대 73% 라이브특가</span>
                           </div>
-                          <!-- 제품정보 -->
-                          <a href="#">
-                            <div class="live-good">
-                              <div>
-                                <img src="" alt="" />
-                              </div>
-                              <div class="live-goo">
-                                <ul class="live-good-list">
-                                  <li><span>네스트호텔 라이브 특가 구매</span></li>
-                                  <li><span>73%<b>125,100</b>원</span></li>
-                                </ul>
-                              </div>
+                          <div class="live-desc">
+                            <span>11월 02일 (목)</span>
+                            <span><b>18:00</b></span>
+                          </div>
+                        </a>
+                        <!-- 제품정보 -->
+                        <a href="#">
+                          <div class="live-good-img">
+                            <div><img src="images/l1.png" alt="" /></div>
+                          </div>
+                          <div class="live-good-info">
+                            <div class="live-good-info-title">
+                              <span>네스트호텔 라이브특가 구매</span>
                             </div>
-                          </a>
-
+                            <div class="live-good-info-desc">
+                              <span class="live-good-info-discount">73%</span>
+                              <span class="live-good-info-price"
+                                ><b>125,100</b>원</span
+                              >
+                            </div>
+                          </div>
                         </a>
                       </div>
                     </div>
