20231106 마저 작업해야함

--- a/index.html
+++ b/index.html
@@ -430,32 +430,36 @@
                         <!-- 기본정보 -->
                         <a href="#">
                           <!-- 기본정보 출력 -->
-                          <div class="live-img">
-                            <img src="images/l1.png" alt="" />
-                          </div>
-                          <div class="live-info">
-                            <span>방송예정</span>
-                            <span>네스트호텔 최대 73% 라이브특가</span>
-                          </div>
-                          <div class="live-desc">
-                            <span>11월 02일 (목)</span>
-                            <span><b>18:00</b></span>
+                          <div class="live-slide-item-info">
+                            <div class="live-img">
+                              <img src="images/l1.png" alt="" />
+                            </div>
+                            <div class="live-info">
+                              <span>방송예정</span>
+                              <span>네스트호텔 최대 73% 라이브특가</span>
+                            </div>
+                            <div class="live-desc">
+                              <span>11월 02일 (목)</span>
+                              <span><b>18:00</b></span>
+                            </div>
                           </div>
                         </a>
                         <!-- 제품정보 -->
                         <a href="#">
-                          <div class="live-good-img">
-                            <div><img src="images/l1.png" alt="" /></div>
-                          </div>
-                          <div class="live-good-info">
-                            <div class="live-good-info-title">
-                              <span>네스트호텔 라이브특가 구매</span>
+                          <div class="live-slide-item-good">
+                            <div class="live-good-img">
+                              <img src="images/l-1.jpg" alt="" />
                             </div>
-                            <div class="live-good-info-desc">
-                              <span class="live-good-info-discount">73%</span>
-                              <span class="live-good-info-price"
-                                ><b>125,100</b>원</span
-                              >
+                            <div class="live-good-info">
+                              <div class="live-good-info-title">
+                                <span>네스트호텔 라이브특가 구매</span>
+                              </div>
+                              <div class="live-good-info-desc">
+                                <span class="live-good-info-discount">73%</span>
+                                <span class="live-good-info-price"
+                                  ><b>125,100</b>원</span
+                                >
+                              </div>
                             </div>
                           </div>
                         </a>
