20231107 마저 작업해야함

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     <div class="swiper-slide">
                       <div class="live-slide-item">
                         <!-- 기본정보 -->
-                        <a href="#">
+                        <a href="#" class="live-slide-link">
                           <!-- 기본정보 출력 -->
                           <div class="live-slide-item-info">
                             <div class="live-img">
@@ -445,14 +445,14 @@
                           </div>
                         </a>
                         <!-- 제품정보 -->
-                        <a href="#">
+                        <a href="#" class="live-slide-good-link">
                           <div class="live-slide-item-good">
                             <div class="live-good-img">
                               <img src="images/l-1.jpg" alt="" />
                             </div>
                             <div class="live-good-info">
                               <div class="live-good-info-title">
-                                <span>네스트호텔 라이브특가 구매</span>
+                                <span>네스트호텔 라이브특가 구매하러</span>
                               </div>
                               <div class="live-good-info-desc">
                                 <span class="live-good-info-discount">73%</span>
