--- a/index.html
+++ b/index.html
@@ -252,19 +252,19 @@
                             <div class="tour-info-up">${obj.state}</div>
                             <ul class="tour-good-list">
                               <li>
-                                <span class="tour-good-list-desc-title"
-                                  >${obj.title}</span
-                                >
+                                <div class="tour-good-list-desc-title">
+                                  ${obj.title}
+                                </div>
                               </li>
                               <li>
-                                <span class="tour-good-list-desc"
-                                  >${obj.desc}</span
-                                >
+                                <div class="tour-good-list-desc">
+                                  ${obj.desc}
+                                </div>
                               </li>
                               <li>
-                                <span class="tour-good-info-price"
-                                  ><b>${obj.price}</b>원~</span
-                                >
+                                <div class="tour-good-info-price">
+                                  <b>${obj.price}</b>원~
+                                </div>
                               </li>
                             </ul>
                           </div>
